--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -19,6 +19,11 @@ header {
     color: #000000;
 }
 
+.nav-links a:hover {
+    color: #c72323;
+    transition: ease-in 0.5s;
+}
+
 .logo img {
     width: 5%
 }
